SCM-commit for otp issue

--- a/smartcontactmanager/src/main/resources/templates/verify_otp.html
+++ b/smartcontactmanager/src/main/resources/templates/verify_otp.html
@@ -41,7 +41,7 @@
 						
 							<h1 class="text-center m-3">VERIFY YOUR OTP</h1>
 
-							<form action="" th:action="@{/verify_otp}" method="post">
+							<form action="" th:action="@{/verifyy_otp}" method="post">
 								<div class="form-group">
 									<input name="user_filled_otp" required type="text" class="form-control"
 										placeholder="Enter Your otp here..." />
