--- a/smartcontactmanager/src/main/resources/templates/CustomizedLoginPage.html
+++ b/smartcontactmanager/src/main/resources/templates/CustomizedLoginPage.html
@@ -21,9 +21,11 @@
                             <h3 class="text-center text-info">LOGIN</h3>
                             
                           
-							<div th:if="${param.error}" class="alert alert-danger">
+							<!--it will shown by new page of missmatch id and password in black and red colour
+								<div th:if="${param.error}" class="alert alert-danger">
 								Invalid Username or Password !!
-							</div>
+							</div>-->
+							
                             <div th:if="${param.logout}" class="alert alert-success">
 								You Have Been Sucessfully Logged Out !!
 							</div>
@@ -32,6 +34,11 @@
 							
                             <div th:if="${param.change}" class="alert alert-success">
 								<p th:text="${param.change}"></p>
+							</div>
+							
+							<!--below message code after user account succesfully deleted permanently-->
+                            <div th:if="${param.deleted}" class="alert alert-success">
+								<p th:text="${param.deleted}"></p>
 							</div>
 							
 							
