--- a/smartcontactmanager/src/main/resources/templates/about.html
+++ b/smartcontactmanager/src/main/resources/templates/about.html
@@ -14,7 +14,10 @@
 			<!-- Main jumbotron for a primary marketing message or call to action -->
 			<div class="jumbotron">
 				<div class="container">
-					<h1 class="display-3 text-primary text-center fw-bold ">Welcome to Smart Contact Manager !</h1>
+					<h1 class="display-3 text-primary text-center fw-bold ">
+						<marquee class="text-info" width="90%" direction="left" height="80px">
+							Welcome to Smart Contact Manager ! </marquee>
+					</h1>
 					<h4>At Smart Contact Manager !! we are passionate about simplifying your contact management
 						experience.
 						Our platform allows you to seamlessly organize, store, and access your contacts from anywhere in
@@ -115,18 +118,18 @@
 							<!--image on connect social media page-->
 							<div class="mt-5 text-center">
 
-								<a
-									href="https://www.linkedin.com/feed/?trk=sem-ga_campid.14650114788_asid.151761418307_crid.657403558721_kw.linkedin%20login_d.c_tid.kwd-12704335873_n.g_mt.e_geo.9301136"><img
-										style="width:20%;" th:src="@{/image/LinkedIn.png}" alt="" class="container" />
+								<a href="https://www.linkedin.com/feed/?trk=sem-ga_campid.14650114788_asid.151761418307_crid.657403558721_kw.linkedin%20login_d.c_tid.kwd-12704335873_n.g_mt.e_geo.9301136"
+									target=”_blank”><img style="width:20%;" th:src="@{/image/LinkedIn.png}" alt=""
+										class="container" />
 								</a>
-								<a href="https://www.facebook.com/"> <img style="width:20%;"
+								<a href="https://www.facebook.com/" target=”_blank”> <img style="width:20%;"
 										th:src="@{/image/facebook.png}" alt="" class="container" />
 								</a>
-								<a href="https://www.instagram.com/"><img style="width:20%;" th:src="@{/image/instagram.jpg}" alt=""
-										class="container" />
+								<a href="https://www.instagram.com/" target=”_blank”><img style="width:20%;"
+										th:src="@{/image/instagram.jpg}" alt="" class="container" />
 								</a>
-								<a href="https://twitter.com/i/flow/login"><img style="width:20%;" th:src="@{/image/twitter.png}" alt=""
-										class="container" />
+								<a href="https://twitter.com/i/flow/login" target=”_blank”><img style="width:20%;"
+										th:src="@{/image/twitter.png}" alt="" class="container" />
 								</a>
 
 
