--- a/smartcontactmanager/src/main/resources/templates/normal/user_base.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/user_base.html
@@ -14,14 +14,14 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" th:href="@{/css/style.css}" />
 	<title th:text="${title}">base html</title>
-	
-	
+
+
 	<!--below script is for toggle sidebar only-->
 	<script src="https://code.jquery.com/jquery-3.6.0.js"
 		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-	
-	
+
+
 </head>
 
 <body>
@@ -65,13 +65,18 @@
 
 	<div class="sidebar mt-2">
 		<span class="crossBtn " onclick="toggleSidebar()"><i class="fa-solid fa-xmark "></i></span>
-		<a id="home-link" href="#" th:href="@{/user/index}" class="item mt-2"><i class="fa-solid fa-house-user"></i> HOME</a>
-		<a id="viewContacts-link" href="#" th:href="@{/user/show-contacts/0}" class="item"><i class="fa-solid fa-table-list"></i> VIEW
+		<a id="home-link" href="#" th:href="@{/user/index}" class="item mt-2"><i class="fa-solid fa-house-user"></i>
+			HOME</a>
+		<a id="viewContacts-link" href="#" th:href="@{/user/show-contacts/0}" class="item"><i
+				class="fa-solid fa-table-list"></i> VIEW
 			CONTACTS</a>
-		<a id="addContacts-link" href="#" th:href="@{/user/add-contact}" class="item"><i class="fa-solid fa-pen-to-square"></i> ADD
+		<a id="addContacts-link" href="#" th:href="@{/user/add-contact}" class="item"><i
+				class="fa-solid fa-pen-to-square"></i> ADD
 			CONTACTS</a>
-		<a id="yourProfile-link"href="#" th:href="@{/user/your-profile}" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE</a>
-		<a id="settings-link" href="#" th:href="@{/user/settings}" class="item"><i class="fa-solid fa-gear"></i> SETTINGS</a>
+		<a id="yourProfile-link" href="#" th:href="@{/user/your-profile}" class="item"><i class="fa-solid fa-user"></i>
+			YOUR PROFILE</a>
+		<a id="settings-link" href="#" th:href="@{/user/settings}" class="item"><i class="fa-solid fa-gear"></i>
+			SETTINGS</a>
 		<a href="#" th:href="@{/logout}" class="item"><i class="fa-solid fa-right-to-bracket"></i> LOGOUT</a>
 		<div class="divider"></div>
 	</div>
@@ -84,7 +89,7 @@
 		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 
 		<!--message after add contact done -->
-		
+
 		<div class="container" th:if="${session.message}">
 			<div class="alert text-center" th:classappend="${'alert-'+session.message.type}" role="alert">
 				<span th:text="${session.message.content}"></span>
@@ -111,10 +116,12 @@
 
 	<!-- Optional JavaScript; choose one of the two! -->
 
-	
+
 	<!--below script for sweet alert code start-->
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+
+	<!--below script for delete contact alert-->
 	<script>
 
 		function deleteContact(cid) {
@@ -129,8 +136,8 @@
 				.then((willDelete) => {
 					if (willDelete) {
 						
-						window.location="/user/delete/"+cid;
-						
+						window.location = "/user/delete/"+cid;
+
 					} else {
 						swal("Your Contact file is not deleted it is safe..!!");
 					}
@@ -138,10 +145,39 @@
 
 		}
 
-	<!--below script for sweet alert code End-->
+	</script>
 
+
+
+
+	<!--below script for delete user permenently alert-->
+	<script>
+
+		function deleteUser() {
+
+			swal({
+				title: "Are you sure?",
+				text: "Once Account Deleted,its PermaNent CanNot Recovered Again..!!",
+				icon: "warning",
+				buttons: true,
+				dangerMode: true,
+			})
+				.then((willDelete) => {
+					if (willDelete) {
+
+						window.location = "/user/delete_user/";
+
+					} else {
+						swal("Great Choice !!	hey User YouR AccounT is not deleted it is safe..!!");
+					}
+				});
+
+		}
 
 	</script>
+
+
+
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
